# QTKT-rust

./: .gitignore  CHANGELOG.md  README.md  demo_list.txt  package-lock.json  package.json  prompt.py  tailwind.config.js
.brain/: brain.json  handover.md  session.json  session_log.txt
.github/workflows/: release.yml
docs/: BRIEF.md  BRIEF_MERGE_PATH.md  DESIGN.md  SPECS.md  design-specs.md
docs/architecture/: system_overview.md
plans/240314-1832-api-key-rotation/: phase-01-storage.md  phase-02-ui.md  phase-03-integration.md  plan.md
plans/240314-2006-skip-onboarding/: phase-01-ui-bypass.md  phase-02-ux-polish.md  plan.md
plans/260314-2353-stop-button/: phase-01-ui.md  phase-02-logic.md  phase-03-testing.md  plan.md
plans/260315-0012-merge-export-path/: phase-01-backend.md  phase-02-frontend.md  phase-03-merge-logic.md  plan.md
plans/260320-1951-tim-kiem-byt/: phase-01-setup.md  phase-02-file-import.md  phase-03-ui-table.md  phase-04-copy-logic.md  phase-05-ux-persist.md  plan.md
src/: app.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: docx_generator.rs  docx_merger.rs  file_io.rs  gemini.rs  lib.rs  secure_storage.rs
src/lib/components/: Onboarding.svelte  Sidebar.svelte
src/lib/components/screens/: Generator.svelte  Guide.svelte  Merger.svelte  Settings.svelte  TimKiemBYT.svelte
src/routes/: +layout.svelte  +page.svelte
