[package]
name = "qtkt-maker"
version = "1.0.2"
description = "QTKT Maker chuẩn tiếng Việt, tuân thủ Bộ Y Tế."
authors = ["Nguyễn Duy Trường <skul9x@gmail.com>"]
edition = "2021"
default-run = "qtkt-maker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.13.2", features = ["json"] }
docx-rs = "0.4.19"
keyring = "3.6.3"
tokio = { version = "1.50.0", features = ["full"] }
tauri-plugin-dialog = "2"
zip = "8.2.0"
quick-xml = "0.39.2"
regex = "1.10.5"
lazy_static = "1.5.0"

